javascript in browsers

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Hello World</h1>
+
+    <script>
+        // This is my first JavaScript code!
+        console.log('Hello World');
+    </script>
 </body>
 </html>
